# Poisson_serial-GPU_Multigrid_Solver

./: CMakeLists.txt  MultiGrid.sln  README.md
MultiGrid/: CMakeLists.txt  MultiGrid.vcxproj
MultiGrid/lib/: CRS_Matrix.cpp  CRS_Matrix.h  CudaErrorHandler.cuh  CudaKernels.cu  CudaMatrixOperations.cu  CudaMatrixOperations.cuh  CudaMemoryHandler.cuh  CudaVector.cu  CudaVector.cuh  CudaVectorOperations.cu  CudaVectorOperations.cuh  Grid.cpp  Grid.h  Matrix.cpp  Matrix.h  SerialMatrixOperations.cpp  SerialMatrixOperations.h  SerialVector.cpp  SerialVector.h  SerialVectorOperations.cpp  SerialVectorOperations.h  Vector.cpp  Vector.h  VectorBase.h
MultiGrid/src/: Iterative_Methods.cpp  Iterative_Methods.h  Multigrid.cpp  Multigrid.h  PDE_Base.h  PDE_Poisson.cpp  PDE_Poisson.h  main.cpp
enc_temp_folder/3a3fbf462ff957d3487f061c2eefb8c/: Multigrid.cpp
